--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
     "ansi-regex": "5.0.1",
+    "axios": "^0.24.0",
     "browserslist": "4.16.5",
     "glob-parent": "5.1.2",
     "immer": "9.0.6",
